--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ body * {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   /*border: 1px solid red;*/
   /*margin: top right  bottom left  */
   margin: 56px auto 0px;
