--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body * {
 }
 
 #profile p {
-  font-weight: bold;
+  font-weight: 400;
   line-height: 24px;
   margin-top: 8px;
 }
@@ -128,7 +128,7 @@ ul li a {
   -webkit-backdrop-filter: blur(4px);
 
   text-decoration: none;
-  font-weight: bold; /* not applying */
+  font-weight: 400; /* not applying */
   transition: background 0.5s;
 }
 
