add more styles fix links fix text

--- a/style.css
+++ b/style.css
@@ -132,6 +132,10 @@ ul li a {
   transition: background 0.5s;
 }
 
+ul li p {
+  padding: 0px 5px;
+}
+
 ul li a:hover {
   background: var(--surface-color-hover);
   border: 1.5px solid var(--text-color);
